--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -12,7 +12,8 @@
                     <form [formGroup]="newLogin" (ngSubmit)="onSubmit()">
                         <div class="form-group">
                             <label>Email</label>
-                            <input type="email" formControlName="email" class="form-control" [class]="isValidField('email')" />
+                            <input id="email" type="email" formControlName="email" class="form-control"
+                                [class]="isValidField('email')" />
                             <div *ngIf="submitted && form.email.errors">
                                 <div>El correo: </div>
                                 <div *ngIf="form.email.errors.required">No puede estar vacío</div>
@@ -21,7 +22,8 @@
                         </div>
                         <div class="form-group">
                             <label>Password</label>
-                            <input type="password" formControlName="password" class="form-control" [class]="isValidField('password')" />
+                            <input id="password" type="password" formControlName="password" class="form-control"
+                                [class]="isValidField('password')" />
                             <div *ngIf="submitted && form.password.errors">
                                 <div>La contraseña: </div>
                                 <div *ngIf="form.password.errors.required">No puede estar vacío</div>
@@ -38,7 +40,7 @@
                                 </button>
                             </div>
                         </div>
-                        <div>{{message}}</div>
+                        <div id="message">{{message}}</div>
                     </form>
                 </div>
             </div>
