--- a/src/app/pages/company/studens-view/studens-view.component.html
+++ b/src/app/pages/company/studens-view/studens-view.component.html
@@ -17,22 +17,26 @@
                             <!-- Card with offer -->
                             <div class="row">
                                 <ng-container>
-                                    <div *ngFor="let student of students | slice: (page-1) * pageSize : page * pageSize" class="col-sm-6">
+                                    <div *ngFor="let student of students | slice: (page-1) * pageSize : page * pageSize"
+                                        class="col-sm-6">
                                         <div class="card mb-4 border-info shadow">
                                             <div class="card-header bg-info">
-                                                <h5 class="card-title mb-0 text">{{ student.name }} {{ student.lastnames }}</h5>
-                                                <button type="button" class="rigth-align btn btn-primary">
-                        <svg class=" text-white" width="20" height="20" fill="currentColor" >
-                          <use xlink:href="bootstrap-icons.svg#eye" />
-                        </svg>
-                      </button>
+                                                <h5 class="card-title mb-0 text">{{ student.name }} {{ student.lastnames
+                                                    }}</h5>
+                                                <button type="button" class="rigth-align btn btn-primary eyeBtn py-1">
+                                                    <svg class=" text-white" width="20" height="20" fill="currentColor">
+                                                        <use xlink:href="bootstrap-icons.svg#eye" />
+                                                    </svg>
+                                                </button>
                                             </div>
                                             <div class="card-body">
-                                                <img src="http://www.hablamosdeeuropa.es/PublishingImages/No%20me%20paro/Formaci%C3%B3n/estudiante.png" class="float-left" width="110" height="110">
+                                                <img src="http://www.hablamosdeeuropa.es/PublishingImages/No%20me%20paro/Formaci%C3%B3n/estudiante.png"
+                                                    class="float-left" width="110" height="110">
                                                 <p class="card-text ">Experiencia</p>
                                                 <p *ngIf="student.status==0" class="card-text "> Desempleado</p>
                                                 <p *ngIf="student.status==1" class="card-text "> Trabajando</p>
-                                                <p *ngIf="student.status==2" class="card-text "> Trabajando, escucha ofertas</p>
+                                                <p *ngIf="student.status==2" class="card-text "> Trabajando, escucha
+                                                    ofertas</p>
                                                 <br>
                                                 <p>{{student.aptitudes}}</p>
                                                 <div *ngFor="let area of student.areas;">
@@ -45,7 +49,8 @@
                             </div>
                         </div>
                         <div class="card-footer ">
-                            <ngb-pagination [(page)]="page" [pageSize]="pageSize" [collectionSize]="students.length " [boundaryLinks]="true ">
+                            <ngb-pagination [(page)]="page" [pageSize]="pageSize" [collectionSize]="students.length "
+                                [boundaryLinks]="true ">
                             </ngb-pagination>
                         </div>
                     </div>
