--- a/src/app/pages/alumno/student-offer/student-offer.component.html
+++ b/src/app/pages/alumno/student-offer/student-offer.component.html
@@ -22,20 +22,17 @@
                         <div class="card-body mt-2">
                             <!-- Oferta -->
                             <div class="row">
-                                <ngb-pagination class="col-12 mb-3" [(page)]="page" [pageSize]="pageSize"
-                                    [collectionSize]="offers.length" [boundaryLinks]="true">
+                                <ngb-pagination class="col-12 mb-3" [(page)]="page" [pageSize]="pageSize" [collectionSize]="offers.length" [boundaryLinks]="true">
                                 </ngb-pagination>
                                 <!-- Se muestra para las ofertas -->
                                 <ng-container>
-                                    <div class="col-sm-6"
-                                        *ngFor="let offer of offers | slice: (page-1) * pageSize : page * pageSize">
+                                    <div class="col-sm-6" *ngFor="let offer of offers | slice: (page-1) * pageSize : page * pageSize">
                                         <div class="card m-2 mb-4 border-info shadow" *ngIf="offer.vacant>0 ">
                                             <div class="card-header bg-info text-white">
                                                 <h3 class="card-title font-weight-bolder border-bottom">{{ offer.name }}
                                                 </h3>
                                                 <p class="mb-0">
-                                                    <a class="badge badge-light text-info mr-3 mb-2 text-uppercase pull-right "
-                                                        (click)="viewCompany(offer.companyId)">
+                                                    <a class="badge badge-light text-info mr-3 mb-2 text-uppercase pull-right " (click)="viewCompany(offer.companyId)">
                                                         {{ offer.companyName }}
                                                     </a>
                                                     <span class="badge badge-light text-info mr-3 pull-right ">
@@ -58,8 +55,7 @@
                                             </div>
                                             <div class="card-footer p-0">
                                                 <div class="w-50 mx-auto">
-                                                    <button type="button" class="btn btn-info rounded-lg w-100"
-                                                        (click)=offerEnroll(offer.id)>
+                                                    <button type="button" class="btn btn-info rounded-lg w-100" (click)=offerEnroll(offer.id)>
                                                         Aceptar
                                                     </button>
                                                 </div>
@@ -70,14 +66,12 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <ngb-pagination [(page)]="page" [pageSize]="pageSize" [collectionSize]="offers.length"
-                                [boundaryLinks]="true">
+                            <ngb-pagination [(page)]="page" [pageSize]="pageSize" [collectionSize]="offers.length" [boundaryLinks]="true">
                             </ngb-pagination>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
