Iconos y estilo dashboard  compañia

--- a/src/app/pages/company/company-dashboard/company-dashboard.component.html
+++ b/src/app/pages/company/company-dashboard/company-dashboard.component.html
@@ -15,8 +15,8 @@
                         <div class="col-sm-6 col-md-6 col-lg-4 ">
                             <div class="card border-info dashboardElement mx-sm-1 p-3 m-2 dashboardCard justify-content-center">
                                 <div class="rounded-circle shadow text-info p-3 mx-auto ">
-                                    <svg class="bi " width="32 " height="32 ">
-                            <use xlink:href="bootstrap-icons.svg#person-plus " />
+                                    <svg class="bi " width="45 " height="45 ">
+                            <use xlink:href="bootstrap-icons.svg#file-earmark-arrow-up" />
                                 </svg>
                                 </div>
                                 <div class="text-info text-center mt-3 ">
@@ -32,8 +32,8 @@
                         <div class="col-sm-6 col-md-6 col-lg-4 ">
                             <div class="card border-success dashboardElement mx-sm-1 p-3 m-2 dashboardCard justify-content-center">
                                 <div class="rounded-circle shadow text-info p-3 mx-auto ">
-                                    <svg class="bi " width="32 " height="32 ">
-                            <use xlink:href="bootstrap-icons.svg#file-earmark-arrow-up " />
+                                    <svg class="bi " width="45 " height="45 ">
+                            <use xlink:href="bootstrap-icons.svg#file-earmark-person " />
                                 </svg>
                                 </div>
                                 <div class="text-success text-center mt-3 ">
@@ -49,12 +49,12 @@
                         <div class="col-sm-6 col-md-6 col-lg-4 ">
                             <div class="card border-danger dashboardElement mx-sm-1 p-3 m-2 dashboardCard justify-content-center">
                                 <div class="rounded-circle shadow text-info p-3 mx-auto ">
-                                    <svg class="bi " width="32 " height="32 ">
-                            <use xlink:href="bootstrap-icons.svg#file-earmark-person " />
+                                    <svg class="bi " width="45 " height="45 ">
+                            <use xlink:href="bootstrap-icons.svg#file-earmark-excel " />
                                 </svg>
                                 </div>
                                 <div class="text-danger text-center mt-3 ">
-                                    <h5>Solicitudes rechazadas</h5>
+                                    <h4>Solicitudes rechazadas</h4>
                                 </div>
                                 <div class="text-danger text-center mt-2 ">
                                     <h1>{{solicitudRechazada}}</h1>
@@ -66,8 +66,8 @@
                         <div class="col-sm-6 col-md-6 col-lg-2 ">
                             <div class="card border-warning dashboardElement mx-sm-1 p-3 m-2 dashboardCard justify-content-center">
                                 <div class="rounded-circle shadow text-info p-3 mx-auto ">
-                                    <svg class="bi " width="32 " height="32 ">
-                            <use xlink:href="bootstrap-icons.svg#hand-thumbs-up " />
+                                    <svg class="bi " width="45 " height="45 ">
+                            <use xlink:href="bootstrap-icons.svg#person-lines-fill " />
                                 </svg>
                                 </div>
                                 <div class="text-warning text-center mt-3 ">
@@ -83,8 +83,8 @@
                         <div class="col-sm-6 col-md-6 col-lg-2 ">
                             <div class="card border-warning dashboardElement mx-sm-1 p-3 m-2 dashboardCard justify-content-center">
                                 <div class="rounded-circle shadow text-info p-3 mx-auto ">
-                                    <svg class="bi " width="32 " height="32 ">
-                            <use xlink:href="bootstrap-icons.svg#hand-thumbs-up " />
+                                    <svg class="bi " width="45 " height="45 ">
+                            <use xlink:href="bootstrap-icons.svg#person-check-fill " />
                                 </svg>
                                 </div>
                                 <div class="text-warning text-center mt-3 ">
@@ -100,8 +100,8 @@
                         <div class="col-sm-6 col-md-6 col-lg-2 ">
                             <div class="card border-warning dashboardElement mx-sm-1 p-3 m-2 dashboardCard justify-content-center">
                                 <div class="rounded-circle shadow text-info p-3 mx-auto ">
-                                    <svg class="bi " width="32 " height="32 ">
-                            <use xlink:href="bootstrap-icons.svg#hand-thumbs-up " />
+                                    <svg class="bi " width="45 " height="45 ">
+                            <use xlink:href="bootstrap-icons.svg#person-x " />
                                 </svg>
                                 </div>
                                 <div class="text-warning text-center mt-3 ">
