--- a/src/app/pages/alumno/student-dashboard/student-dashboard.component.html
+++ b/src/app/pages/alumno/student-dashboard/student-dashboard.component.html
@@ -15,14 +15,82 @@
                 <div class="row  justify-content-center">
                     <a routerLink="../ofertas">
                         <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3 pt-2">
-                            <div class="card border-success dashboardElement mx-sm-1  dashboardCard">
+                            <div class="card border-success dashboardElement mx-sm-1  dashboardCard justify-content-center">
                                 <div class="rounded-circle shadow text-success p-3 mx-auto">
-                                    <svg class="bi" width="32" height="32">
+                                    <svg class="bi" width="45" height="45">
                             <use xlink:href="bootstrap-icons.svg#inboxes-fill" />
                                 </svg>
                                 </div>
                                 <div class="text-success text-center mt-1">
-                                    <h4>Solicitudes</h4>
+                                    <h4>Ofertas inscrito</h4>
+                                </div>
+                                <div class="text-success text-center mt-1">
+                                    <h1>{{ofertas}}</h1>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a routerLink="../ofertas">
+                        <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3 pt-2">
+                            <div class="card border-warning dashboardElement mx-sm-1   dashboardCard justify-content-center">
+                                <div class="rounded-circle shadow text-warning p-3 mx-auto">
+                                    <svg class="bi" width="45" height="45">
+                            <use xlink:href="bootstrap-icons.svg#patch-question" />
+                                </svg>
+                                </div>
+                                <div class="text-warning text-center mt-1">
+                                    <h4>Ofertas pendientes</h4>
+                                </div>
+                                <div class="text-warning text-center mt-1">
+                                    <h1>{{sinRespuesta}}</h1>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a routerLink="../ofertas">
+                        <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3 pt-2">
+                            <div class="card border-info dashboardElement mx-sm-1  dashboardCard justify-content-center">
+                                <div class="rounded-circle shadow text-info p-3 mx-auto">
+                                    <svg class="bi" width="45" height="45">
+                            <use xlink:href="bootstrap-icons.svg#journal-check" />
+                                </svg>
+                                </div>
+                                <div class=" text-info text-center mt-1">
+                                    <h4>Ofertas aceptado</h4>
+                                </div>
+                                <div class=" text-info text-center mt-1">
+                                    <h1>{{aceptado}}</h1>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a routerLink="../ofertas">
+                        <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3 pt-2 ">
+                            <div class="card border-danger dashboardElement mx-sm-1 dashboardCard justify-content-center">
+                                <div class="rounded-circle shadow text-danger p-3 mx-auto">
+                                    <svg class="bi" width="45" height="45">
+                            <use xlink:href="bootstrap-icons.svg#newspaper" />
+                                </svg>
+                                </div>
+                                <div class="text-danger text-center mt-1">
+                                    <h4>Ofertas rechazado</h4>
+                                </div>
+                                <div class="text-danger text-center mt-1">
+                                    <h1>{{rechazado}}</h1>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <a routerLink="../ofertas">
+                        <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3 pt-2">
+                            <div class="card border-success dashboardElement mx-sm-1  dashboardCard justify-content-center">
+                                <div class="rounded-circle shadow text-success p-3 mx-auto">
+                                    <svg class="bi" width="45" height="45">
+                            <use xlink:href="bootstrap-icons.svg#inboxes-fill" />
+                                </svg>
+                                </div>
+                                <div class="text-success text-center mt-1">
+                                    <h4>Solicitudes </h4>
                                 </div>
                                 <div class="text-success text-center mt-1">
                                     <h1>{{solicitudes}}</h1>
@@ -32,51 +100,51 @@
                     </a>
                     <a routerLink="../ofertas">
                         <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3 pt-2">
-                            <div class="card border-danger dashboardElement mx-sm-1   dashboardCard">
-                                <div class="rounded-circle shadow text-danger p-3 mx-auto">
-                                    <svg class="bi" width="32" height="32">
+                            <div class="card border-warning dashboardElement mx-sm-1   dashboardCard justify-content-center">
+                                <div class="rounded-circle shadow text-warning p-3 mx-auto">
+                                    <svg class="bi" width="45" height="45">
                             <use xlink:href="bootstrap-icons.svg#patch-question" />
                                 </svg>
                                 </div>
-                                <div class="text-danger text-center mt-1">
-                                    <h4>Ofertas Sin respuesta</h4>
+                                <div class="text-warning text-center mt-1">
+                                    <h4>Solicitudes pendientes</h4>
                                 </div>
-                                <div class="text-danger text-center mt-1">
-                                    <h1>{{sinRespuesta}}</h1>
+                                <div class="text-warning text-center mt-1">
+                                    <h1>{{solicitudesPendientes}}</h1>
                                 </div>
                             </div>
                         </div>
                     </a>
                     <a routerLink="../ofertas">
                         <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3 pt-2">
-                            <div class="card border-warning dashboardElement mx-sm-1  dashboardCard">
-                                <div class="rounded-circle shadow text-warning p-3 mx-auto">
-                                    <svg class="bi" width="32" height="32">
+                            <div class="card border-info dashboardElement mx-sm-1  dashboardCard justify-content-center">
+                                <div class="rounded-circle shadow text-info p-3 mx-auto">
+                                    <svg class="bi" width="45" height="45">
                             <use xlink:href="bootstrap-icons.svg#journal-check" />
                                 </svg>
                                 </div>
-                                <div class=" text-warning text-center mt-1">
-                                    <h4>Aceptado</h4>
+                                <div class=" text-info text-center mt-1">
+                                    <h4>Solicitado</h4>
                                 </div>
-                                <div class=" text-warning text-center mt-1">
-                                    <h1>{{aceptado}}</h1>
+                                <div class=" text-info text-center mt-1">
+                                    <h1>{{candidato}}</h1>
                                 </div>
                             </div>
                         </div>
                     </a>
                     <a routerLink="../ofertas">
                         <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3 pt-2 ">
-                            <div class="card border-info dashboardElement mx-sm-1 dashboardCard">
-                                <div class="rounded-circle shadow text-info p-3 mx-auto">
-                                    <svg class="bi" width="32" height="32">
+                            <div class="card border-danger dashboardElement mx-sm-1 dashboardCard justify-content-center">
+                                <div class="rounded-circle shadow text-danger p-3 mx-auto">
+                                    <svg class="bi" width="45" height="45">
                             <use xlink:href="bootstrap-icons.svg#newspaper" />
                                 </svg>
                                 </div>
-                                <div class="text-info text-center mt-1">
-                                    <h4>Rechazado</h4>
+                                <div class="text-danger text-center mt-1">
+                                    <h4>Solicitudes rechazadas</h4>
                                 </div>
-                                <div class="text-info text-center mt-1">
-                                    <h1>{{rechazado}}</h1>
+                                <div class="text-danger text-center mt-1">
+                                    <h1>{{solicitudesRechazado}}</h1>
                                 </div>
                             </div>
                         </div>
