--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -84,7 +84,10 @@
                             <a routerLink="../ofertas">Mis ofertas</a>
                         </li>
                         <li class="bg-secondary-50">
-                            <a href="#">Candidatos</a>
+                            <a routerLink="../candidatosAceptados">Candidatos aceptados</a>
+                        </li>
+                        <li class="bg-secondary-50">
+                            <a routerLink="../candidatosPendientes">Candidatos pendientes</a>
                         </li>
                     </ul>
                 </li>
