--- a/src/app/pages/company/candidatos-aceptados/candidatos-aceptados.component.html
+++ b/src/app/pages/company/candidatos-aceptados/candidatos-aceptados.component.html
@@ -11,7 +11,7 @@
                     <!-- Card with offer -->
                     <div class="card w-100 mb-4 shadow">
                         <div class="card-header bg-secondary">
-                            <h2 class="card-title text-white font-weight-bold my-2">Alumnos</h2>
+                            <h2 class="card-title text-white font-weight-bold my-2">Candidatos aceptados</h2>
                         </div>
                         <div class="card-body mt-2">
                             <!-- Card with offer -->
@@ -22,11 +22,7 @@
                                             <div class="card-header bg-info">
                                                 <h5 class="card-title mb-0 text">{{ student.name }} {{ student.lastnames }}
                                                 </h5>
-                                                <button type="button" class="rigth-align btn btn-primary eyeBtn py-1" (click)="open(student)">
-                                                    <svg class=" text-white" width="20" height="20" fill="currentColor">
-                                                        <use xlink:href="bootstrap-icons.svg#reply" />
-                                                    </svg>
-                                                </button>
+
                                             </div>
                                             <div class="card-body">
                                                 <img src="http://www.hablamosdeeuropa.es/PublishingImages/No%20me%20paro/Formaci%C3%B3n/estudiante.png" class="float-left" width="110" height="110">
@@ -40,6 +36,9 @@
                                                 <div *ngFor="let area of student.areas;">
                                                     <p class="card-text">{{area}}</p>
                                                 </div>
+                                                <br>
+                                                <p> E-mail : {{student.email}}</p>
+                                                <p> Telefono: {{student.phone}}</p>
                                             </div>
                                         </div>
                                     </div>
