--- a/src/app/pages/company/crear-perfil/crear-perfil.component.html
+++ b/src/app/pages/company/crear-perfil/crear-perfil.component.html
@@ -2,7 +2,8 @@
     <div class="form-row">
         <div class="form-group col-md-6">
             <label>CIF:</label>
-            <input type="text" class="form-control" placeholder="CIF" formControlName="cif" [class]="isValidField('cif')">
+            <input id="cif" type="text" class="form-control" placeholder="CIF" formControlName="cif"
+                [class]="isValidField('cif')">
             <div class="invalid-feedback">
                 <span *ngIf="companyInfoForm.get('cif').errors?.required">
                     Por favor introduzca su CIF
@@ -14,10 +15,11 @@
                 </span>
             </div>
         </div>
-        <div class="form-group col-md-6 ">
+        <div id="fecha" class="form-group col-md-6 ">
             <label>Fecha de fundacion:</label>
             <div class="input-group">
-                <input class="form-control" placeholder="yyyy-mm-dd" formControlName="birthdate" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker" [class]="isValidField('birthdate')">
+                <input class="form-control" placeholder="yyyy-mm-dd" formControlName="birthdate" [(ngModel)]="model"
+                    ngbDatepicker #d="ngbDatepicker" [class]="isValidField('birthdate')">
                 <div class="input-group-append">
                     <!--Poner icono manual-->
                     <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button">
@@ -37,7 +39,8 @@
     <div class="form-row ">
         <div class="form-group col-md-6">
             <label>Nombre:</label>
-            <input type="text" class="form-control" placeholder="Nombre" formControlName="name" [class]="isValidField('name')">
+            <input id="nombre" type="text" class="form-control" placeholder="Nombre" formControlName="name"
+                [class]="isValidField('name')">
             <div class=" invalid-feedback ">
                 <span *ngIf="companyInfoForm.get( 'name').errors?.required ">
                     Por favor introduzca su nombre
@@ -51,7 +54,8 @@
         </div>
         <div class="form-group col-md-6">
             <label>Sector:</label>
-            <input type="text " class="form-control " placeholder="Sector de trabajo " formControlName="sector" [class]="isValidField('sector')">
+            <input id="sector" type="text " class="form-control " placeholder="Sector de trabajo "
+                formControlName="sector" [class]="isValidField('sector')">
             <div class="invalid-feedback ">
                 <span *ngIf="companyInfoForm.get('sector').errors?.required">
                     Por favor introduzca su sector de trabajo
@@ -62,7 +66,9 @@
     <div class="form-row">
         <div class="form-group col-md-12 ">
             <label>Descripcion:</label>
-            <textarea style="resize: none;" name="description" cols="15" rows="10" class="form-control " placeholder="Introduce una breve descripcion de la empresa" formControlName="description" [class]="isValidField('description') "></textarea>
+            <textarea id="descripcion" style="resize: none;" name="description" cols="15" rows="10"
+                class="form-control " placeholder="Introduce una breve descripcion de la empresa"
+                formControlName="description" [class]="isValidField('description') "></textarea>
             <div class="invalid-feedback ">
                 <span *ngIf="companyInfoForm.get('description').errors?.required ">
                     Debe describir su empresa
