Fixes varios para alumno

--- a/src/app/pages/admin/users-crud/users-crud.component.html
+++ b/src/app/pages/admin/users-crud/users-crud.component.html
@@ -13,7 +13,8 @@
                     <div class="row">
 
                         <ng-container>
-                            <div class="col-sm-12 col-md-6" *ngFor="let user of users  | slice: (page-1) * pageSize : page * pageSize">
+                            <div class="col-sm-12 col-md-6"
+                                *ngFor="let user of users  | slice: (page-1) * pageSize : page * pageSize">
                                 <div class="card m-2 mb-4 border-secondary shadow ">
                                     <div class="card-body ">
                                         <div class="row ">
@@ -35,30 +36,34 @@
                                     </div>
                                     <div class="card-footer p-0 ">
                                         <div class="btn-group w-100 ">
-                                            <button type="button " title="Editar usuario " class="btn btn-secondary btn-border rounded-0 ">
-                                            <svg class="bi " width="26 " height="26 " fill="currentColor "
-                                                (click)=userUpdate(user)>
-                                                <use xlink:href="bootstrap-icons.svg#pencil " />
-                                            </svg>
-                                        </button>
-                                            <button [disabled]="loginService.user.user_id==user.id " type="button " title="Eliminar usuario " class="btn btn-border btn-danger rounded-0 ">
-                                            <svg class="bi " width="26 " height="26 " fill="currentColor "
+                                            <button type="button " (click)=userUpdate(user) title="Editar usuario "
+                                                class="btn btn-secondary btn-border rounded-0 ">
+                                                <svg class="bi " width="26 " height="26 " fill="currentColor ">
+                                                    <use xlink:href="bootstrap-icons.svg#pencil" />
+                                                </svg>
+                                            </button>
+                                            <button [disabled]="loginService.user.user_id==user.id " type="button "
+                                                title="Eliminar usuario " class="btn btn-border btn-danger rounded-0 "
                                                 (click)=userDelete(user.id)>
-                                                <use xlink:href="bootstrap-icons.svg#x " />
-                                            </svg>
-                                        </button>
-                                            <button [disabled]="loginService.user.user_id==user.id " title="Desactivar usuario " *ngIf="user.isActive==1 " type="button " class="btn-border btn btn-success rounded-0 ">
-                                            <svg class="bi " width="26 " height="26 " fill="currentColor "
+                                                <svg class="bi " width="26 " height="26 " fill="currentColor">
+                                                    <use xlink:href="bootstrap-icons.svg#x " />
+                                                </svg>
+                                            </button>
+                                            <button [disabled]="loginService.user.user_id==user.id "
+                                                title="Desactivar usuario " *ngIf="user.isActive==1 " type="button "
+                                                class="btn-border btn btn-success rounded-0 "
                                                 (click)=userActive(user.id,0)>
-                                                <use xlink:href="bootstrap-icons.svg#check-square " />
-                                            </svg>
-                                        </button>
-                                            <button *ngIf="user.isActive==0 " type="button " title="Activar usuario " class="btn-border btn btn-danger rounded-0 ">
-                                            <svg class="bi " width="26 " height="26 " fill="currentColor "
+                                                <svg class="bi " width="26 " height="26 " fill="currentColor ">
+                                                    <use xlink:href="bootstrap-icons.svg#check-square " />
+                                                </svg>
+                                            </button>
+                                            <button *ngIf="user.isActive==0 " type="button " title="Activar usuario "
+                                                class="btn-border btn btn-danger rounded-0 "
                                                 (click)=userActive(user.id,1)>
-                                                <use xlink:href="bootstrap-icons.svg#square " />
-                                            </svg>
-                                        </button>
+                                                <svg class="bi " width="26 " height="26 " fill="currentColor ">
+                                                    <use xlink:href="bootstrap-icons.svg#square " />
+                                                </svg>
+                                            </button>
                                         </div>
                                     </div>
                                 </div>
@@ -67,7 +72,8 @@
                     </div>
                 </div>
                 <div class="card-footer ">
-                    <ngb-pagination [(page)]="page" [pageSize]="pageSize" [collectionSize]="users.length " [boundaryLinks]="true ">
+                    <ngb-pagination [(page)]="page" [pageSize]="pageSize" [collectionSize]="users.length "
+                        [boundaryLinks]="true ">
                     </ngb-pagination>
                 </div>
             </div>
